--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "#*": "./*.js"
   },
   "scripts": {
-    "start": "node --env-file=.env server.js",
+    "start": "node server.js",
     "dev": "node --watch --env-file=.env server.js",
     "test": "vitest",
     "db:schema": "psql -d lasso -f db/schema.sql",
@@ -19,7 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.14.1"
+    "pg": "^8.16.3"
   },
   "engines": {
     "node": ">=22.0.0"
