--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "node --watch --env-file=.env server.js",
     "test": "vitest",
     "db:schema": "psql -d lasso -f db/schema.sql",
-    "db:seed": "node db/seed.js",
+    "db:seed": "node --env-file=.env db/seed.js",
     "db:reset": "npm run db:schema && npm run db:seed"
   },
   "dependencies": {
